--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   </header>
 
   <main>
-    <p>This is a very simple static site!! used to learn GitHub Actions.</p>
+    <p>This is a very simple static site used to learn GitHub Actions.</p>
+    <p>This is a new paragraph!</p>
     <button id="clickMe">Click me</button>
     <p id="message"></p>
   </main>
